@@ -1,3 +1,4 @@
+Fractions Intro: Changed all inner stroke widths to 1.0 while leaving the exterior stroke width thick
 Fractions Intro: Removed unused cake code
 Fractions Intro: Fixed: Cake container slices do not match up exactly with the slice locations
 # 0.00.48 (62151) Mar 3, 2012
